# youtube-archiver

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  REQUIREMENTS.md  pyproject.toml  pytest.ini
.github/workflows/: archive.yml  ci.yml
config/: backlog-cleanup.yml  ci.yml  example.yml
docs/: fork-setup.md  initial-setup-guide.md
scripts/: setup-github-secrets.sh
src/youtube_archiver/: __init__.py  main.py
src/youtube_archiver/application/services/: __init__.py  archiving_service.py
src/youtube_archiver/application/use_cases/: __init__.py  validate_config.py
src/youtube_archiver/cli/: __init__.py  main.py  utils.py
src/youtube_archiver/domain/: exceptions.py
src/youtube_archiver/domain/models/: __init__.py  channel.py  processing.py  video.py
src/youtube_archiver/domain/services/: __init__.py  archiving_service.py  configuration_provider.py  video_repository.py  visibility_manager.py
src/youtube_archiver/infrastructure/: __init__.py  container.py
src/youtube_archiver/infrastructure/config/: __init__.py  models.py  yaml_provider.py
src/youtube_archiver/infrastructure/youtube/: __init__.py  auth_manager.py  video_repository.py  visibility_manager.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli_integration.py  test_container_integration.py
tests/unit/: test_archiving_service.py  test_auth_manager.py  test_config_models.py  test_domain_models.py  test_video_repository.py  test_yaml_provider.py
